# cppp-reiconv

./: .cvsignore  .gitignore  .gitmodules  .markdownlint.json  00README  CMakeLists.txt  CPPPPKG  ChangeLog  FILELIST  HACKING  INSTALL.generic  INSTALL.windows  Makefile.devel  Makefile.in  Makefile.msvc  Makefile.os2  NEWS  NEWS.md  NOTES  PORTS  README  README.md  README.os2  README.win32  README.woe32  README.zh_CN.md  THANKS  TODO  aclocal.m4  autogen.sh  autopull.sh  config.h.in  config.h.msvc  configure  configure.ac  configure.in  cpack.cmake  cpppdist.py  repo.json  setup.cmd  (+1 more)
.github/workflows/: build.yml  test.yml
.rubisco/: build.yml  dist.yml  test.yml
autoconf/: acgeneral.m4  aclocal.m4  autoconf  autoconf.m4f  config.guess  config.sub  eilseq.m4  ltconfig  ltmain.sh
benchmark/: benchmark.cpp  benchmark.hpp  benchmark.md  compile.sh  glib_iconv.cpp  libiconv_iconv.cpp  reiconv_iconv.cpp  run.py  test_string.hpp
build-aux/: config.guess  install-reloc  ltmain.sh  missing  reloc-ldflags
djgpp/: Makefile.maint  README  README.in  config.bat  config.sed  config.site  edtest.bat  fnchange.in  fnchange.lst  makefile.sed  sources.sed  translit-check.sed
docs/: README.md  c-api.md  cpp-api.md
docs/zh_CN/: README.md  c-api.md  cpp-api.md
extras/: ChangeLog  iconv.m4  iconv_string.c  iconv_string.h  locale_charset.c
extras/gnu-utils/: codeset.m4  localcharset.c
gnulib-local/lib/: xalloc.h  xmalloc.c  xreadlink.c  xreadlink.h  xstrdup.c
gnulib-local/modules/: canonicalize  progreloc  relocatable  uniwidth  xreadlink
include/: iconv.h.in  iconv.h.msvc  iconv.h.msvc-shared  iconv.h.msvc-static  libiconv.h.in  libiconv.h.msvc
include/cppp/: reiconv.h.in  reiconv.hpp.in
lang/: en_US.langmap  zh_CN.langmap
lib/: .cvsignore  Makefile.in  Makefile.msvc  Makefile.os2  aliases.gperf  aliases.h  aliases2.h  aliases_dos.h  all_encodings.h  armscii_8.h  ascii.h  atarist.h  big5.h  big5_2003.h  big5hkscs.h  big5hkscs1999.h  big5hkscs2001.h  big5hkscs2004.h  big5hkscs2008.h  c99.h  ces_big5.h  ces_gbk.h  cjk_variants.h  cns11643.h  cns11643_1.h  cns11643_15.h  cns11643_2.h  cns11643_3.h  cns11643_4.h  cns11643_4a.h  cns11643_4b.h  cns11643_5.h  cns11643_6.h  cns11643_7.h  cns11643_inv.h  codepage_to_ei.h  config.h.in  config.h.msvc  converters.h  cp1046.h  (+243 more)
lib/converters/: armscii_8.h  ascii.h  atarist.h  big5.h  big5_2003.h  big5hkscs1999.h  big5hkscs2001.h  big5hkscs2004.h  big5hkscs2008.h  c99.h  ces_big5.h  ces_gbk.h  cjk_variants.h  cns11643.h  cns11643_1.h  cns11643_15.h  cns11643_2.h  cns11643_3.h  cns11643_4.h  cns11643_4a.h  cns11643_4b.h  cns11643_5.h  cns11643_6.h  cns11643_7.h  cns11643_inv.h  cp1046.h  cp1124.h  cp1125.h  cp1129.h  cp1131.h  cp1133.h  cp1161.h  cp1162.h  cp1163.h  cp1250.h  cp1251.h  cp1252.h  cp1253.h  cp1254.h  cp1255.h  (+196 more)
lib/localecharset/: lc_types.h  lc_utils.h  locale_table.h  windows_getcp.h
libcharset/: .cvsignore  ChangeLog  HACKING  INSTALL.generic  INTEGRATE  Makefile.devel  Makefile.in  Makefile.msvc  README  README.win32  README.woe32  autogen.sh  autopull.sh  config.h.in  config.h.msvc  configure  configure.ac  configure.in
libcharset/autoconf/: aclocal.m4  install-sh
libcharset/build-aux/: config.guess  config.sub  ltmain.sh
libcharset/djgpp/: README  README.in  config.bat  config.sed  config.site  fnchange.lst
libcharset/include/: libcharset.h.in  libcharset.h.msvc-shared  localcharset.h.in
libcharset/lib/: .cvsignore  ChangeLog  Makefile.in  Makefile.msvc  config.charset  localcharset.c  ref-add.sin  ref-del.sin  relocatable.c  relocatable.h
libcharset/m4/: ChangeLog  libtool.m4
libcharset/tools/: README  all-charsets  (+1 more)
m4/: endian.m4  general.m4  install.m4  libtool.m4  stdbool.m4  stdint.m4  strerror_r.m4
man/: Makefile.in  Makefile.msvc  Makefile.os2  iconv.1  iconv.3  iconv.3.html  iconv_close.3  iconv_open.3  iconv_open.3.html  iconv_open_into.3  iconvctl.3
os2/: indir.cmd
po/: ChangeLog  LINGUAS  Makefile.in.in  Makefile.msvc  Makevars  af.po  bg.po  ca.po  cs.po  da.po  de.gmo  de.po  el.po  eo.po  es.po  et.po  fi.po  fr.po  ga.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  libiconv.pot  lt.po  nl.po  pl.po  pt_BR.po  rm.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  tr.po  uk.po  (+4 more)
preload/: Makefile.devel  Makefile.in  configure.ac
src/: .cvsignore  Makefile.in  Makefile.msvc  Makefile.os2  Makefile.vms  aliases.gperf  aliases.h  big5hkscs.h  config.h.in  config.h.msvc  converters.h  cp1046.h  cp1124.h  cp1129.h  cp856.h  cp922.h  cp950.h  encodings.def  euc_kr.h  flags.h  gb18030.h  gb18030ext.h  gb18030uni.h  genaliases.c  genaliases2.c  genflags.c  gentranslit.c  hkscs.h  iconv.c  iso2022_kr.h  johab_hangul.h  translit.def  translit.h  ucs2.h  ucs2be.h  ucs2internal.h  ucs2le.h  ucs2swapped.h  ucs4internal.h  ucs4swapped.h  (+5 more)
srclib/: Makefile.am  Makefile.in  Makefile.msvc  alloca_.h  allocsa.h  canonicalize.c  cjk.h  error.c  error.h  progname.c  progname.h  progreloc.c  readlink.c  setenv.c  setenv.h  streq.h  strerror.c  unitypes.h  uniwidth.h  unlocked-io.h  width.c  xalloc.h
tests/: BIG5-2003.TXT  CP932.IRREVERSIBLE.TXT  CP932.TXT  CP950.TXT  EUC-JP.IRREVERSIBLE.TXT  EUC-JP.TXT  EUC-TW.IRREVERSIBLE.TXT  EUC-TW.TXT  GB18030.TXT  ISO-2022-JP-MS-snippet.UTF-8  ISO-8859-8.TXT  Makefile.in  Makefile.msvc  Makefile.os2  SHIFT-JIS.TXT  _iconv.hpp  binary-io.h  buffer.hpp  check-ascii-converters.cpp  check-ebcdic  check-encoding.cpp  check-stateful  check-stateful.bat  check-stateful.cmd  check-stateful.cpp  check-stateless  check-stateless.bat  check-stateless.cpp  check-subst  check-tag  check-translit  check-translit.bat  check-translit.cmd  check-translitfailure  cmp.c  cmp.cpp  data-generator.cpp  file_utils.hpp  gengb18030z.c  gengb18030z.cpp  (+26 more)
tools/: 8bit_tab_to_h.c  Makefile  build.ps1  build.sh  check-encodings.cpp  cjk_tab_to_h.c  cjk_variants.c  gen-translit-def-part.lisp  genaliases.cpp  genaliases2.cpp  genflags.cpp  genindexes.cpp
windows/: cppp-reiconv.rc.in  iconv.rc  libcppp-reiconv.rc  libcppp-reiconv.rc.in  libiconv.rc
woe32dll/: export.h  iconv-exports.c
(+3 files in other folders)
